--- a/UIKitInterface/Base.lproj/Main.storyboard
+++ b/UIKitInterface/Base.lproj/Main.storyboard
@@ -1,24 +1,168 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UIKitInterface" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="xuo-s8-9gv">
+                                <rect key="frame" x="98" y="149" width="199" height="31"/>
+                                <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                                <connections>
+                                    <action selector="sliderRedAction" destination="BYZ-38-t0r" eventType="valueChanged" id="0wA-Ty-gGB"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dVw-eD-r6n">
+                                <rect key="frame" x="50" y="154" width="49" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6An-P8-xhN">
+                                <rect key="frame" x="300" y="154" width="65" height="21"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="e1W-uf-5QU">
+                                <rect key="frame" x="98" y="232" width="202" height="31"/>
+                                <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                                <connections>
+                                    <action selector="sliderGreenAction" destination="BYZ-38-t0r" eventType="valueChanged" id="TGs-1b-vlZ"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MoM-u0-VPq">
+                                <rect key="frame" x="50" y="228" width="49" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pN0-2j-n8t">
+                                <rect key="frame" x="303" y="228" width="62" height="21"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="PeE-DC-Mhi">
+                                <rect key="frame" x="98" y="315" width="202" height="31"/>
+                                <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                                <connections>
+                                    <action selector="sliderBlueAction" destination="BYZ-38-t0r" eventType="valueChanged" id="LPM-4U-EHu"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXv-jU-IFx">
+                                <rect key="frame" x="50" y="302" width="49" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJN-T9-AdR">
+                                <rect key="frame" x="303" y="302" width="32" height="21"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="dDs-Q7-yBP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMr-9h-C9B">
+                                <rect key="frame" x="10" y="154" width="35" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gr:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3F-Mb-ajp">
+                                <rect key="frame" x="22" y="228" width="23" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgP-kR-dBR">
+                                <rect key="frame" x="7" y="302" width="38" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <constraints>
+                            <constraint firstItem="PeE-DC-Mhi" firstAttribute="top" secondItem="e1W-uf-5QU" secondAttribute="bottom" constant="53" id="3NS-Dg-hDa"/>
+                            <constraint firstItem="dVw-eD-r6n" firstAttribute="leading" secondItem="wMr-9h-C9B" secondAttribute="trailing" constant="5" id="4Wk-NM-GpD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pN0-2j-n8t" secondAttribute="trailing" constant="10" id="7np-ln-YhH"/>
+                            <constraint firstItem="pN0-2j-n8t" firstAttribute="leading" secondItem="e1W-uf-5QU" secondAttribute="trailing" constant="5" id="9pJ-7N-fyb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6An-P8-xhN" secondAttribute="trailing" constant="10" id="9rp-KZ-5xF"/>
+                            <constraint firstItem="pN0-2j-n8t" firstAttribute="top" secondItem="6An-P8-xhN" secondAttribute="bottom" constant="53" id="Ax5-xk-P3d"/>
+                            <constraint firstItem="NXv-jU-IFx" firstAttribute="leading" secondItem="dgP-kR-dBR" secondAttribute="trailing" constant="5" id="DRB-7o-o0X"/>
+                            <constraint firstItem="xuo-s8-9gv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="E8v-26-p1h"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kJN-T9-AdR" secondAttribute="trailing" constant="10" id="FYz-0V-WpO"/>
+                            <constraint firstItem="kJN-T9-AdR" firstAttribute="leading" secondItem="PeE-DC-Mhi" secondAttribute="trailing" constant="80" id="L7y-5s-199"/>
+                            <constraint firstItem="MoM-u0-VPq" firstAttribute="leading" secondItem="R3F-Mb-ajp" secondAttribute="trailing" constant="5" id="M2S-4b-yVi"/>
+                            <constraint firstItem="NXv-jU-IFx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="MBp-b1-D9p"/>
+                            <constraint firstItem="MoM-u0-VPq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Mhc-Nt-M3o"/>
+                            <constraint firstItem="xuo-s8-9gv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="149" id="NfT-At-xFa"/>
+                            <constraint firstItem="6An-P8-xhN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="154" id="Spq-dU-sea"/>
+                            <constraint firstItem="wMr-9h-C9B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="154" id="V1S-po-McE"/>
+                            <constraint firstItem="pN0-2j-n8t" firstAttribute="leading" secondItem="e1W-uf-5QU" secondAttribute="trailing" constant="5" id="WEa-bi-neV"/>
+                            <constraint firstItem="NXv-jU-IFx" firstAttribute="top" secondItem="MoM-u0-VPq" secondAttribute="bottom" constant="53" id="XuE-9X-D2E"/>
+                            <constraint firstItem="e1W-uf-5QU" firstAttribute="leading" secondItem="MoM-u0-VPq" secondAttribute="trailing" constant="1" id="ZST-Rt-By3"/>
+                            <constraint firstItem="PeE-DC-Mhi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="aVW-uG-Iw9"/>
+                            <constraint firstItem="MoM-u0-VPq" firstAttribute="top" secondItem="dVw-eD-r6n" secondAttribute="bottom" constant="53" id="bWf-9i-4bk"/>
+                            <constraint firstItem="dVw-eD-r6n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="154" id="cAH-Md-Cua"/>
+                            <constraint firstItem="pN0-2j-n8t" firstAttribute="leading" secondItem="e1W-uf-5QU" secondAttribute="trailing" constant="80" id="dhA-XE-Mvl"/>
+                            <constraint firstItem="6An-P8-xhN" firstAttribute="leading" secondItem="xuo-s8-9gv" secondAttribute="trailing" constant="5" id="eJI-DG-RcH"/>
+                            <constraint firstItem="kJN-T9-AdR" firstAttribute="leading" secondItem="PeE-DC-Mhi" secondAttribute="trailing" constant="5" id="eqh-HS-S8J"/>
+                            <constraint firstItem="e1W-uf-5QU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="fZq-Kz-l6q"/>
+                            <constraint firstItem="e1W-uf-5QU" firstAttribute="top" secondItem="xuo-s8-9gv" secondAttribute="bottom" constant="53" id="hdJ-4W-o2D"/>
+                            <constraint firstItem="kJN-T9-AdR" firstAttribute="top" secondItem="pN0-2j-n8t" secondAttribute="bottom" constant="53" id="jCw-VQ-tiT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xuo-s8-9gv" secondAttribute="trailing" constant="80" id="lrY-sE-YpI"/>
+                            <constraint firstItem="PeE-DC-Mhi" firstAttribute="leading" secondItem="NXv-jU-IFx" secondAttribute="trailing" constant="1" id="m32-yz-mja"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e1W-uf-5QU" secondAttribute="trailing" constant="77" id="pSu-4q-hx0"/>
+                            <constraint firstItem="dgP-kR-dBR" firstAttribute="top" secondItem="R3F-Mb-ajp" secondAttribute="bottom" constant="53" id="qTn-TE-bai"/>
+                            <constraint firstItem="xuo-s8-9gv" firstAttribute="leading" secondItem="dVw-eD-r6n" secondAttribute="trailing" constant="1" id="rfm-Ks-ggS"/>
+                            <constraint firstItem="kJN-T9-AdR" firstAttribute="leading" secondItem="PeE-DC-Mhi" secondAttribute="trailing" constant="5" id="vgN-LD-t54"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PeE-DC-Mhi" secondAttribute="trailing" constant="77" id="vyE-Qp-ehb"/>
+                            <constraint firstItem="R3F-Mb-ajp" firstAttribute="top" secondItem="wMr-9h-C9B" secondAttribute="bottom" constant="53" id="wB8-aZ-Vkb"/>
+                            <constraint firstItem="dVw-eD-r6n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="z3D-EM-eBT"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="indicatorBlue1" destination="NXv-jU-IFx" id="OCz-bj-jQk"/>
+                        <outlet property="indicatorBlue2" destination="kJN-T9-AdR" id="1bl-aa-bnz"/>
+                        <outlet property="indicatorGreen1" destination="MoM-u0-VPq" id="DAD-LW-KS2"/>
+                        <outlet property="indicatorGreen2" destination="pN0-2j-n8t" id="R4Y-xI-VV5"/>
+                        <outlet property="indicatorRed1" destination="dVw-eD-r6n" id="GcD-gU-9Yv"/>
+                        <outlet property="indicatorRed2" destination="6An-P8-xhN" id="xyc-OW-KmH"/>
+                        <outlet property="sliderBlue" destination="PeE-DC-Mhi" id="eMJ-Wq-Ahx"/>
+                        <outlet property="sliderGreen" destination="e1W-uf-5QU" id="dpQ-7v-pr2"/>
+                        <outlet property="sliderRed" destination="xuo-s8-9gv" id="Ob1-io-pcM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="89.505247376311857"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
